# qibosoq

./: .gitignore  .nbstripout.json  .pre-commit-config.yaml  ExecutePulseSequence.py  ExecuteSweep.py  README.md  dev-install.bash  dev-uninstall.bash  flake.nix  mypy.ini  photon_counting.py  pyproject.toml  rfsocServer.py  rfsoc_server.py
.github/: codecov.yml  pull_request_template.md
.github/workflows/: deploy.yml  mypy.yml  publish.yml  pylint.yml  tests.yml
doc/source/: conf.py  index.rst
doc/source/api-reference/: index.rst  modules.rst  qibosoq.components.rst  qibosoq.programs.rst  qibosoq.rst
doc/source/getting-started/: communication.rst  index.rst  installation.rst  pulses.rst  qibosoq_lab_cal.rst  sweepers.rst  tutorials.rst  usage.rst
extras/: DAC_calibration.ipynb  Plot_sequence.ipynb  loopback_tests.ipynb
extras/DAC_calibration/: Calibration.rst
extras/examples/: examples.ipynb  resonator_spectroscopy.ipynb
extras/qibosoq_paper_runcards/: README.MD  README.md  calibration_experiments.yml  experiments_platform_runcard.yml  my_platform.yml  routines_benchmarks.yml  scaling_benchmarks.yml
fpga-server/src/: rfsoc_server.py
src/qibosoq/: TIDAC80508.py  __init__.py  __main__.py  abstracts.py  client.py  components.py  configuration.py  log.py  qick_programs.py  rfsoc_server.py  server.py
src/qibosoq/components/: __init__.py  base.py  pulses.py
src/qibosoq/drivers/: AD_HMC7044.py  LMK04828_245.25.txt  TI_DAC80508.py  hello_GPIO.elf
src/qibosoq/programs/: __init__.py  base.py  flux.py  pulse_sequence.py  sweepers.py
tests/: qick_config_multiplexed.json  qick_config_standard.json  test_client.py  test_components.py  test_configuration.py  test_log.py  test_main.py  test_prints.py  test_programs_base.py  test_programs_flux.py  test_programs_sequence.py  test_programs_sweepers.py  test_qick_programs.py  test_qick_programs_mux.py  test_rfsoc_server.py  test_server.py  test_test.py
