[tool.poetry]
name = "qibosoq"
version = "0.0.3"
description = "QIBO Server On Qick (qibosoq) is the server component of qibolab to be run on RFSoC boards"
authors = [
  "Rodolfo Carobene <rodolfo.carobene@gmail.com>",
  "Javier Serrano <javier.serrano@tii.ae>",
]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/qiboteam/qibosoq/"
documentation = ""
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
packages = [{ include = "qibosoq", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
qick = "0.2.135"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
furo = "^2023.3.27"
recommonmark = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-markdown-tables = "^0.0.17"
nbsphinx = "^0.9.1"
ipython = "^8.12.0"
sphinx-copybutton = "^0.5.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = ">=2.16.0"

[tool.poe.tasks]
test = "pytest"
lint = "pylint src --errors-only"
lint-warnings = "pylint src --exit-zero"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"

[tool.pytest.ini_options]
testpaths = ['tests/']
addopts = ['--cov=qibosoq', '--cov-report=xml', '--cov-report=html']
