[project]
name = "qibosoq"
version = "0.1.5"
description = "QIBO Server On Qick (qibosoq) is the server component of qibolab to be run on RFSoC boards"
authors = [
  { name = "Rodolfo Carobene", email = "rodolfo.carobene@gmail.com" },
  { name = "The Qibo Team"}
]
license = { text = "Apache License 2.0" }
readme = "README.md"
keywords = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.8,<3.14"
dependencies = [
  "qick>=0.2.211,<=0.2.249",
  "numpy>=1.24,<2"
]

[project.urls]
Repository = "https://github.com/qiboteam/qibosoq/"
Documentation = "https://qibo.science/qibosoq/stable/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0.0"
pudb = "^2024.1.1"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = ">=2.16.0"
mypy = "^1.10.1"
tomli = { version = "^2.2.1", python = "<3.11" }
dill = { version = ">=0.3.6", python = "<3.11" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
furo = "^2023.3.27"
recommonmark = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-markdown-tables = "^0.0.17"
nbsphinx = "^0.9.7"
sphinx-copybutton = "^0.5.1"
sphinx-last-updated-by-git = "^0.3.5"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = ">=3.10.0"
tomli = { version = "^2.2.1", python = "<3.11" }
exceptiongroup = { version = ">=1.0.0rc8", python = "<3.13" }

[tool.poe.tasks]
test = "pytest"
lint = "pylint src --errors-only"
lint-warnings = "pylint src --exit-zero"
mypy = "mypy src/"
docs = "make -C doc html"
docs-clean = "make -C doc clean"
test-docs = "make -C doc doctest"
types = "true"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = ["--cov=qibosoq", "--cov-report=xml", "--cov-report=html"]

[[tool.mypy.overrides]]
module = "qick.*"
ignore_missing_imports = true
